docs: add swagger documentation to some api endpoints
